--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,100 +25,55 @@ classifiers = [
 ]
 
 dependencies = [
-    # Core YOLO packages (fixos)
-    "ultralytics==8.3.102",
-    "ultralytics-thop==2.0.14",
-    # PyTorch ecosystem (fixos)
-    "torch==2.6.0",
-    "torchvision==0.21.0",
-    "triton==3.2.0",
-    # NVIDIA CUDA packages (fixos)
-    "nvidia-cublas-cu12==12.4.5.8",
-    "nvidia-cuda-cupti-cu12==12.4.127",
-    "nvidia-cuda-nvrtc-cu12==12.4.127",
-    "nvidia-cuda-runtime-cu12==12.4.127",
-    "nvidia-cudnn-cu12==9.1.0.70",
-    "nvidia-cufft-cu12==11.2.1.3",
-    "nvidia-curand-cu12==10.3.5.147",
-    "nvidia-cusolver-cu12==11.6.1.9",
-    "nvidia-cusparse-cu12==12.3.1.170",
-    "nvidia-cusparselt-cu12==0.6.2",
-    "nvidia-nccl-cu12==2.21.5",
-    "nvidia-nvjitlink-cu12==12.4.127",
-    "nvidia-nvtx-cu12==12.4.127",
+    # Core YOLO packages
+    "ultralytics>=8.0.0",
+    # PyTorch ecosystem - let PyTorch handle CUDA dependencies automatically
+    "torch>=2.0.0",
+    "torchvision>=0.15.0",
     # Computer vision essentials
-    "opencv-python==4.11.0.86",
-    "pillow>=10.4",
-    "imageio>=2.37",
-    "imageio-ffmpeg>=0.6",
+    "opencv-python>=4.5.0",
+    "pillow>=9.0.0",
+    "imageio>=2.20.0",
+    "imageio-ffmpeg>=0.4.0",
     # Machine learning core
-    "numpy>=1.26",
-    "scipy>=1.15",
-    "scikit-learn>=1.6",
-    "pandas>=2.2",
+    "numpy>=1.21.0",
+    "scipy>=1.7.0",
+    "scikit-learn>=1.0.0",
+    "pandas>=1.3.0",
     # Visualization
-    "matplotlib>=3.10",
-    "seaborn>=0.13",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
     # Deep learning utilities
-    "timm>=1.0.15",
-    "safetensors>=0.5.3",
-    "huggingface-hub>=0.31",
+    "timm>=0.6.0",
+    "safetensors>=0.3.0",
+    "huggingface-hub>=0.15.0",
     # Utilities
-    "tqdm>=4.67",
+    "tqdm>=4.60.0",
     "pyyaml>=6.0",
-    "requests>=2.32",
-    "urllib3>=1.26",
-    # Panel/Bokeh specific packages
+    "requests>=2.25.0",
+    # Panel/Bokeh web interface
     "panel>=1.0.0",
-    "bleach>=6.2",
-    "certifi>=2025.7",
-    "charset-normalizer>=3.4",
-    "colorama>=0.4.6",
-    "contourpy>=1.3",
-    "idna>=3.10",
-    "Jinja2>=3.1",
-    "linkify-it-py>=2.0",
-    "Markdown>=3.8",
-    "markdown-it-py>=3.0",
-    "MarkupSafe>=3.0",
-    "mdurl>=0.1",
-    "narwhals>=2.0",
-    "packaging>=25.0",
-    "param>=2.2",
-    "python-dateutil>=2.9",
-    "pytz>=2025.2",
-    "pyviz_comms>=3.0",
-    "six>=1.17",
-    "tornado>=6.5",
-    "typing_extensions>=4.14",
-    "tzdata>=2025.2",
-    "uc-micro-py>=1.0",
-    "webencodings>=0.5",
-    "xyzservices>=2025.4",
-    # Geometric operations
+    "bokeh>=3.0.0",
     # Video processing
     "ffmpeg-python>=0.2.0",
-    "black>=25.1.0",
-    "isort>=6.0.1",
 ]
 
 [project.optional-dependencies]
+# GPU support - let PyTorch automatically handle CUDA dependencies
 gpu = [
-    "torch==2.6.0",
-    "torchvision==0.21.0",
-    "triton==3.2.0",
-    "nvidia-cublas-cu12==12.4.5.8",
-    "nvidia-cuda-runtime-cu12==12.4.127",
-    "nvidia-cudnn-cu12==9.1.0.70",
+    "torch>=2.0.0",
+    "torchvision>=0.15.0",
 ]
+# Computer vision models
 yolo = [
-    "ultralytics==8.3.102",
-    "ultralytics-thop==2.0.14",
+    "ultralytics>=8.0.0",
 ]
+# Visualization and analysis
 viz = [
-    "matplotlib>=3.10",
-    "seaborn>=0.13",
+    "matplotlib>=3.5.0",
+    "seaborn>=0.11.0",
     "panel>=1.0.0",
+    "bokeh>=3.0.0",
 ]
 dev = [
     "pre-commit>=3.7.0",
@@ -129,8 +84,7 @@ dev = [
     "pytest-cov>=5.0.0",
 ]
 
-[[tool.uv.index]]
-url = "https://tractian-454752402615.d.codeartifact.us-east-1.amazonaws.com/pypi/data-repo/simple/"
+# Removed private repository index - using PyPI only
 
 [project.scripts]
 pymicetracking = "pymicetracking_panel.app:main"
