--- a/pymice-react/backend/pyproject.toml
+++ b/pymice-react/backend/pyproject.toml
@@ -26,11 +26,12 @@ dependencies = [
 
 [project.optional-dependencies]
 gpu = [
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
+    "torch==2.6.0",
+    "torchvision==0.21.0",
+    "torchaudio==2.6.0",
 ]
 yolo = [
-    "ultralytics>=8.0.0",
+    "ultralytics==8.3.102",
 ]
 dev = [
     "pytest>=7.0.0",
