tests with video_codec

--- a/pymice-react/backend/.gitignore
+++ b/pymice-react/backend/.gitignore
@@ -23,6 +23,7 @@ wheels/
 # Virtual Environment
 venv/
 env/
+uv-venv/
 ENV/
 
 # IDE
@@ -31,6 +32,9 @@ ENV/
 *.swp
 *.swo
 *~
+
+# Node Modules
+node_modules/
 
 # Environment variables
 .env
