--- a/pymice-react/backend/pyproject.toml
+++ b/pymice-react/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "pymicetracking-web-backend"
+name = "pymice-web-backend"
 version = "1.0.0"
-description = "Backend API for PyMiceTracking Web Application"
+description = "Backend API for PyMice Web Application"
 requires-python = ">=3.11"
 license = { text = "MIT" }
 dependencies = [
