--- a/pymice-react/.gitignore
+++ b/pymice-react/.gitignore
@@ -48,7 +48,7 @@ pymice-react/frontend/build/
 # Backend temp files
 pymice-react/backend/temp/
 !pymice-react/backend/temp/models/
-!pymice-react/backend/temp/models/yolo_model.pt
+!pymice-react/backend/temp/models/*.pt
 
 # Logs directory
 pymice-react/logs/
